argocd/atrium/id-dev/resources.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  namespace: id-dev
  name: id
spec:
  parentRefs:
    - namespace: cilium-system
      name: web-gateway
      sectionName: https-id-dev-bacchus-io
  hostnames:
    - id-dev.bacchus.io
  rules:
    # default route to frontend
    - backendRefs:
        - name: id-front
          port: 80
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            remove:
              - Server
    # backend routes
    - backendRefs:
        - name: id-core
          port: 80
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            remove:
              - Server
            set:
              - name: Referrer-Policy
                value: no-referrer
              - name: Content-Security-Policy
                value: "default-src 'none'; object-src 'none'; base-uri 'none'; frame-ancestors 'none'"
              - name: X-Content-Type-Options
                value: nosniff
              - name: X-Frame-Options
                value: DENY
              - name: X-XSS-Protection
                value: "1; mode=block"
              - name: Cache-Control
                value: "private, no-cache, no-store, max-age=0, must-revalidate"
              - name: Pragma
                value: no-cache
      matches:
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /o
        - path:
            type: Exact
            value: /Authentication/Login.aspx
